--- a/Assignment/templates/chatroom.html
+++ b/Assignment/templates/chatroom.html
@@ -1,89 +1,46 @@
 {% extends 'base.html' %}
 {% block content %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/elliptic/6.5.4/elliptic.min.js"></script>
-<script>
-    var sha256Bytes;
-    var ec;
-    var keyPair;
-    var friendPublicKey;
-    var sk;
-</script>
 <div class="message-box">
     <h2>Chat Room: {{code}}</h2>
-    <div class="message" id="messages">
-        {% for msg in message %}
-        <div class="text">
-            <span><strong>{{ msg.user_name}}</strong>: <span id="decrypted_message_{{ loop.index }}"></span></span>
-        </div>
-        <script>
-            var encryptedMessage = "{{ msg.message }}";
-            var user_password = "{{ current_user.password }}";
-            var fpk = "{{ friend_pk }}"
-            ec = new elliptic.ec('secp256k1');
-            sha256Bytes = new Uint8Array(user_password.match(/.{1,2}/g).map(byte => parseInt(byte, 16)));
-            keyPair = ec.genKeyPair({ entropy: sha256Bytes });
-            friendPublicKey = ec.keyFromPublic(fpk, 'hex').getPublic();
-            sk = keyPair.derive(friendPublicKey, keyPair.getPrivate()).toString('hex');
-            var decryptedMessage = CryptoJS.AES.decrypt(encryptedMessage, sk).toString(CryptoJS.enc.Utf8);
-            document.getElementById("decrypted_message_{{ loop.index }}").textContent = decryptedMessage;
-        </script>
-        {% endfor %}
-    </div>
+    <div class="message" id="messages"></div>
     <div class="inputs">
         <input type="text" rows="4" placeholder="Message" name="message" id="message"/>
-        <button type="button" name="send" id="send-btn" onclick="sendMessage()">Send</button>
+        <button type="buttion" name="send" id="send-btn" onClick="sendMessage()">Send</button>
+        <button type="button" name="back" id="send-btn" onclick="goBack()">Back</button>
     </div>
 </div>
 <script type="text/javascript">
     var socketio = io()
-    var user_password = "{{ current_user.password }}";
-    var fpk = "{{ friend_pk }}"
-    ec = new elliptic.ec('secp256k1');
-    sha256Bytes = new Uint8Array(user_password.match(/.{1,2}/g).map(byte => parseInt(byte, 16)));
-    keyPair = ec.genKeyPair({ entropy: sha256Bytes });
-    friendPublicKey = ec.keyFromPublic(fpk, 'hex').getPublic();
-    sk = keyPair.derive(friendPublicKey, keyPair.getPrivate()).toString('hex');
-    function sendMessage() {
-        var message = document.getElementById("message").value;
-        if (message == "") return;
-        var encryptedMessage = CryptoJS.AES.encrypt(message, sk).toString();
-        var mac = CryptoJS.HmacSHA256(message, sk).toString();
-        console.log("Encrypted Message:", encryptedMessage);
-        console.log("MAC:", mac);
-        socketio.emit("message", {data: encryptedMessage, mac: mac});
-        document.getElementById("message").value = "";
-    }
-    
-    socketio.on("enter", (data) => {
-        createMessage(data.name, data.message);
-    });
-
-    socketio.on("message", (data) => {
-        var decryptedMessage = CryptoJS.AES.decrypt(data.message, sk).toString(CryptoJS.enc.Utf8);
-        var isValid = verifyMAC(decryptedMessage, data.mac);
-        console.log("maccc: ", data.mac)
-        if (isValid) {
-            createMessage(data.name, decryptedMessage);
-        } else {
-            console.log("Message has been tampered with!");
-        }
-    });
-
+    const message = document.getElementById("messages")
     const createMessage = (name, msg) => {
         const content = `
-            <div class="text">
-                <span><strong>${name}</strong>: ${msg}</span>
-            </div>
+        <div class="text">
+            <span>
+                <strong>${name}</strong>: ${msg}
+        </div>
         `;
         messages.innerHTML += content;
     };
 
-    function verifyMAC(message, mac) {
-        var generatedMAC = CryptoJS.HmacSHA256(message, sk).toString();
-        console.log("result", (generatedMAC==mac));
-        return generatedMAC == mac;
-    }
 
+    socketio.on("message", (data) =>{
+        createMessage(data.name, data.message);
+    });
+
+    const sendMessage = () => {
+        const message = document.getElementById("message")
+        if (message.value == "") return;
+        socketio.emit("message", {data: message.value});
+        message.value = "";
+    };
+
+    const goBack = () =>{
+        window.location.href = "/chathome";
+    }
 </script>
+{% for msg in message %}
+    <script type="text/javascript">
+        createMessage("{{msg.user_name}}", "{{msg.message}}");
+    </script>
+{% endfor %}
 {% endblock %}
