--- a/Assignment/templates/chathome.html
+++ b/Assignment/templates/chathome.html
@@ -8,7 +8,12 @@
         </div>
 {% endif %}
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="5">
+<meta http-equiv="refresh" content="1">
+<div class="repo-btn">
+    <form method="post">
+        <button type="submit" name="repo">Knowledge repository</button>
+    </form>
+</div>
 <div class="container">
     <form method="post" class="chat-form">
         <h1 class="title">Chat with user</h1>
