--- a/Assignment/templates/repo-home.html
+++ b/Assignment/templates/repo-home.html
@@ -23,11 +23,14 @@
         </h1>
         <ul class="post-list">
             {% for post in posts %}
-                <li class="post-item">#{{ post.id }}: {{ post.title }} post by: {{post.poster.username}}
-                    {% if post.poster.role %}
-                        <span class="role-box">{{ post.poster.role.value }}</span>
-                    {% endif %}
-                </li>
+                <form method="post">
+                    <button class="post-item-btn" type="submit" name="get_post" value="{{ post.id }}">
+                        #{{ post.id }}: {{ post.title }} post by: {{ post.poster.username }}
+                        {% if post.poster.role %}
+                            <span class="role-box">{{ post.poster.role.value }}</span>
+                        {% endif %}
+                    </button>
+                </form>
             {% endfor %}
         </ul>
     </div>
